# dndgamerolls

./: .gitignore  Cargo.toml  DnDInfo.md  LICENSE  MIGRATION.md  PRIVACY.md  README.md  build.rs  dnd_stats.json  run_dice3d.bat  settings.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build-msix.yml  ci.yml  publish-cli-crates-io.yml  publish-crates.yml  release.yml  twitter-release.yml
assets/: AppIcon.icns  contributors.json  contributors.ron
assets/fx/: README.md
assets/models/: README.md
assets/shaders/: dice_box_highlight.wgsl  dice_plume_fx.wgsl  dice_surface_fx.wgsl
assets/store/: README.md
assets/textures/: README.md
assets/textures/dice_numbers/: README.md
crates/dndgamerolls-cli/: Cargo.toml  README.md
crates/dndgamerolls-cli/src/: main.rs
docs/: _config.yml  dnd-info.md  index.md  linkedin-post.md
docs/assets/css/: style.scss
packaging/msix/: AppxManifest.xml
screenshots/: README.md
screenshots/cli/: README.md  ability-dex.txt  attack-dagger.txt  save-dex.txt  skill-perception-advantage.txt  skill-stealth.txt  stats.txt
screenshots/dice3d/: README.md  basic-roll.md  skill-check.md
src/: dice3d.rs  dice3d_main.rs  lib.rs  main.rs  unified_main.rs
src/dice3d/: box_highlight.rs  dice_fx.rs  embedded_assets.rs  fx_image_gen.rs  hanabi_fx.rs  mod.rs  systems.rs  types.rs
src/dice3d/meshes/: d10.rs  d12.rs  d20.rs  d4.rs  d6.rs  d8.rs  mod.rs
src/dice3d/systems/: avatar_loader.rs  box_highlight.rs  camera.rs  character_screen.rs  collision_sfx.rs  color_picker.rs  container_centering.rs  contributors_screen.rs  dice.rs  dice_box_controls.rs  dice_box_lid_animations.rs  dice_designer_screen.rs  dice_face_labels.rs  dice_fx.rs  dice_preview.rs  gltf_colliders.rs  gltf_spawn_points.rs  input.rs  mod.rs  rendering.rs  select_theme_preview.rs  settings.rs  setup.rs  slider_group.rs  theme_refresh.rs
src/dice3d/systems/character_screen/: character_list.rs  components.rs  conversion_dialog.rs  handlers.rs  mod.rs  tab_bar.rs
src/dice3d/systems/character_screen/tabs/: attributes.rs  basic_info.rs  combat.rs  mod.rs  saving_throws.rs  skills.rs
src/dice3d/systems/settings_tabs/: colors.rs  colors_interactions.rs  dice.rs  layout.rs  mod.rs  shake_curve.rs  sound_video.rs
src/dice3d/throw_control/: mod.rs  state.rs  systems.rs  ui.rs
src/dice3d/types/: camera.rs  character.rs  contributors.rs  database.rs  dice.rs  dice_designer.rs  dice_fx.rs  icons.rs  mod.rs  settings.rs  sqlite_conversion.rs  ui.rs
tests/: box_glb_animation_duplicate_targets_inspect_test.rs  box_glb_animation_frame_range_test.rs  box_glb_animation_names_test.rs  character_tests.rs  dice_tests.rs  release_artifacts_tests.rs
