[package]
name = "gameroll"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
colored = "2.1"

# Bevy Game Engine
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.27", features = ["simd-stable"] }

[[bin]]
name = "gameroll"
path = "src/main.rs"

[[bin]]
name = "dice3d"
path = "src/dice3d_main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
