[package]
name = "dndgamerolls"
version = "0.1.0"
edition = "2021"
authors = ["Edgar Sanchez <esanchez@m2iab.com>"]
description = "D&D dice roller with CLI and 3D visualization using Bevy"
license = "MIT"
repository = "https://github.com/edgarhsanchez/dndgamerolls"
homepage = "https://github.com/edgarhsanchez/dndgamerolls"
readme = "README.md"
keywords = ["dnd", "dice", "rpg", "bevy", "game"]
categories = ["games", "command-line-utilities", "visualization"]
exclude = [
    ".github/*",
    "target/*",
]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
colored = "2.1"

# Bevy Game Engine
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.27", features = ["simd-stable"] }

[[bin]]
name = "dndgamerolls"
path = "src/main.rs"

[[bin]]
name = "dice3d"
path = "src/dice3d_main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
