[package]
name = "dndgamerolls-cli"
version = "0.2.5"
edition = "2021"
authors = ["Edgar Sanchez <esanchez@m2iab.com>"]
description = "DnD Game Rolls CLI - A command-line D&D dice roller with character sheet support"
license = "MIT"
repository = "https://github.com/edgarhsanchez/dndgamerolls"
homepage = "https://github.com/edgarhsanchez/dndgamerolls"
readme = "README.md"
keywords = ["dnd", "dice", "rpg", "cli", "tabletop"]
categories = ["games", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
colored = "2.1"
surrealdb = { version = "3.0.0-beta.1", default-features = false, features = ["kv-mem", "kv-surrealkv"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "net", "io-util"] }

[[bin]]
name = "dndrolls"
path = "src/main.rs"
